<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <EditText
        android:id="@+id/et_nom_utilisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:drawableTint="@color/primaire"
        android:ems="10"
        android:hint="@string/pseudo"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tv_pseudo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_renitialiser_meilleur_temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0B0100"
        android:text="@string/r_nitialiser_le_meilleur_temps"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/btn_partager" />

    <TextView
        android:id="@+id/tv_meilleur_temps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="13dp"
        android:text="@string/meilleur_temps"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pseudo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="68dp"
        android:layout_height="57dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_partager"
        app:srcCompat="?android:attr/alertDialogIcon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="169dp"
        android:layout_height="181dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cercle_jaune"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/taxi_20" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="167dp"
        android:layout_height="192dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/cercle_noir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/taxi_228" />

    <Button
        android:id="@+id/btn_sauv_et_quitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/sauvegarder_et_quitter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_renitialiser_meilleur_temps" />

    <TextView
        android:id="@+id/tv_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="@string/pseudo"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/illustration_by_icons8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btn_partager"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/partager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meilleur_temps"
        app:srcCompat="@android:drawable/ic_menu_share" />

</androidx.constraintlayout.widget.ConstraintLayout>